<?xml version="1.0" encoding="utf-8"?>
<TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_settings"
        tools:context="com.hetekivi.rasian.Activities.SettingsActivity"
        android:measureWithLargestChild="false" android:stretchColumns="*">
    <TableRow android:layout_width="0dp">
        <TextView
                android:id="@+id/ActivitySettingDelayTitle"
                android:text="@string/ActivitySettingsDelayTitle"
                android:layout_column="0" 
                android:layout_span="1" 
                android:gravity="start|center_vertical"
        />
        <EditText
                android:inputType="numberSigned"
                android:id="@+id/ActivitySettingDelay"
                android:layout_column="1" 
                android:layout_span="1" 
                android:gravity="center_vertical|center"
        />
        <TextView
                android:id="@+id/ActivitySettingDelayUnit"
                android:text="@string/ActivitySettingsDelayUnit"
                android:layout_column="2" 
                android:layout_span="1" 
                android:gravity="center_vertical|end"
        />
    </TableRow>
    <TableRow android:layout_width="0dp">
        <TextView
                android:id="@+id/ActivitySettingLimitTitle"
                android:text="@string/ActivitySettingsLimitTitle"
                android:layout_column="0"
                android:layout_span="1"
                android:gravity="start|center_vertical"
        />
        <EditText
                android:inputType="numberSigned"
                android:id="@+id/ActivitySettingLimit"
                android:layout_column="1"
                android:layout_span="1"
                android:gravity="center_vertical|center"
        />
        <TextView
                android:id="@+id/ActivitySettingLimitUnit"
                android:text="@string/ActivitySettingsLimitUnit"
                android:layout_column="2"
                android:layout_span="1"
                android:gravity="center_vertical|end"
        />
    </TableRow>
    <TableRow android:layout_width="0dp">
        <TextView
                android:id="@+id/ActivitySettingNextUpdate"
                android:layout_span="3"
                android:layout_column="0"
                android:text="@string/ActivitySettingNextUpdate"
                android:gravity="center"/>
    </TableRow>
    <TableRow android:layout_width="0dp">
        <Button
                android:id="@+id/ActivitySettingSave"
                android:text="@string/Save"
                android:background="@color/colorAccent"
                android:layout_span="3"
                android:layout_column="0"
        />
    </TableRow>
</TableLayout>